text-overflow fix

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,7 @@
 #container {
   background-color: #777676;
   border-radius: 1em;
+  width: 380px;
 }
 
 #containerElements {
